# RowdyHacks2024-RowdyPay

./: .gitignore  Cargo.toml  README.md  schema.sql
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: auth_controller.rs  balance_controller.rs  group_controller.rs  hello_world_controller.rs  main.rs  payment_controller.rs  profile_controller.rs  user_controller.rs
commands/: Cargo.toml
commands/src/: auth_commands.rs  balance_commands.rs  group_commands.rs  lib.rs  payment_commands.rs  profile_commands.rs  user_commands.rs
controllers/: Cargo.toml
controllers/src/: balance_controller.rs  group_controller.rs  lib.rs  payment_controller.rs  profile.rs  profile_controller.rs
dtos/: Cargo.toml
dtos/src/: auth_dtos.rs  balance_dtos.rs  group_dtos.rs  lib.rs  profile_dtos.rs
models/: Cargo.toml
models/src/: auth_db_models.rs  balance_db_models.rs  balance_model.rs  group_db_models.rs  group_model.rs  lib.rs  payment_db_models.rs  payment_model.rs  profile_db_models.rs  profile_model.rs  user_db_models.rs  user_model.rs
utils/: Cargo.toml
utils/src/: date_util.rs
