[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros","bigdecimal"] }
dotenvy = "0.15.7"

# workspace dependencies
controllers = { path = "../controllers" }
